openapi offices working
