# openapi/openApi.json
@@ -510,7 +510,398 @@
         }
       }
     }
+  },
+  "/office/{buyRent}/{city}": {
+    "get": {
+      "tags": [
+        "office"
+      ],
+      "summary": "GET all offices",
+      "description": "This endpoint display office by ID",
+      "parameters": [
+
+        {
+          "name": "buyRent",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+      },
+      {
+        "name": "city",
+        "in": "path",
+        "description": "this is the unique name of user",
+        "required": true,
+        "type": "string" 
+    }
+    ],
+      "responses": {
+        "200": {
+          "description": "successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                  "$ref": "#/components/schemas/Office"
+                
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -111.109421,
+                        43.585147
+                      ]
+                    },
+                    "image": [],
+                    "_id": "5e986e2b92ea60ef4e43e8ae",
+                    "street": "string",
+                    "city": "string",
+                    "postCode": 0,
+                    "country": "string",
+                    "building_use": "string",
+                    "title": "string",
+                    "description": "string",
+                    "price": 0,
+                    "buyRent": true,
+                    "date": "2020-04-06T06:01:17.171Z",
+                    "__v": 0
+                  }
+                }
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid tag value",
+          "content": {}
+        }
+      }
+    }
+  },
+  "/office/{buyRent}/{city}/{date}/byDate": {
+    "get": {
+      "tags": [
+        "office"
+      ],
+      "summary": "GET all offices",
+      "description": "This endpoint display office by ID",
+      "parameters": [
+
+        {
+          "name": "buyRent",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+      },
+      {
+        "name": "city",
+        "in": "path",
+        "description": "this is the unique name of user",
+        "required": true,
+        "type": "string" 
+    },
+    {
+      "name": "date",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
   }
+    ],
+      "responses": {
+        "200": {
+          "description": "successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                  "$ref": "#/components/schemas/Office"
+                
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -111.109421,
+                        43.585147
+                      ]
+                    },
+                    "image": [],
+                    "_id": "5e986e2b92ea60ef4e43e8ae",
+                    "street": "string",
+                    "city": "string",
+                    "postCode": 0,
+                    "country": "string",
+                    "building_use": "string",
+                    "title": "string",
+                    "description": "string",
+                    "price": 0,
+                    "buyRent": true,
+                    "date": "2020-04-06T06:01:17.171Z",
+                    "__v": 0
+                  }
+                }
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid tag value",
+          "content": {}
+        }
+      }
+    }
+  },
+  "/office/{buyRent}/{city}/{price}/byPrice": {
+    "get": {
+      "tags": [
+        "office"
+      ],
+      "summary": "GET all offices",
+      "description": "This endpoint display office by ID",
+      "parameters": [
+        {
+          "name": "buyRent",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+      },
+        {
+          "name": "city",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+      },
+    {
+      "name": "price",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
+  }
+    ],
+      "responses": {
+        "200": {
+          "description": "successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                  "$ref": "#/components/schemas/Office"
+                
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -111.109421,
+                        43.585147
+                      ]
+                    },
+                    "image": [],
+                    "_id": "5e986e2b92ea60ef4e43e8ae",
+                    "street": "string",
+                    "city": "string",
+                    "postCode": 0,
+                    "country": "string",
+                    "building_use": "string",
+                    "title": "string",
+                    "description": "string",
+                    "price": 0,
+                    "buyRent": true,
+                    "date": "2020-04-06T06:01:17.171Z",
+                    "__v": 0
+                  }
+                }
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid tag value",
+          "content": {}
+        }
+      }
+    }
+  },
+  "/office/{buyRent}/{city}/{from}/{to}": {
+    "get": {
+      "tags": [
+        "office"
+      ],
+      "summary": "GET all offices",
+      "description": "This endpoint display office by ID",
+      "parameters": [
+        {
+          "name": "buyRent",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+         },
+        {
+          "name": "city",
+          "in": "path",
+          "description": "this is the unique name of user",
+          "required": true,
+          "type": "string" 
+      },
+      {
+      "name": "from",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
+       },
+     {
+      "name": "to",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
+      }
+    ],
+      "responses": {
+        "200": {
+          "description": "successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                  "$ref": "#/components/schemas/Office"
+                
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -111.109421,
+                        43.585147
+                      ]
+                    },
+                    "image": [],
+                    "_id": "5e986e2b92ea60ef4e43e8ae",
+                    "street": "string",
+                    "city": "string",
+                    "postCode": 0,
+                    "country": "string",
+                    "building_use": "string",
+                    "title": "string",
+                    "description": "string",
+                    "price": 0,
+                    "buyRent": true,
+                    "date": "2020-04-06T06:01:17.171Z",
+                    "__v": 0
+                  }
+                }
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid tag value",
+          "content": {}
+        }
+      }
+    }
+  },
+  "/office/buyRent/city/{building_use}/{from}/{to}/{date}": {
+    "get": {
+      "tags": [
+        "office"
+      ],
+      "summary": "GET all offices",
+      "description": "This endpoint display office by ID",
+      "parameters": [
+        
+      {
+        "name": "building_use",
+        "in": "path",
+        "description": "this is the unique name of user",
+        "required": true,
+        "type": "string" 
+       },
+       {
+        "name": "date",
+        "in": "path",
+        "description": "this is the unique name of user",
+        "required": true,
+        "type": "string" 
+    },
+      {
+      "name": "from",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
+       },
+     {
+      "name": "to",
+      "in": "path",
+      "description": "this is the unique name of user",
+      "required": true,
+      "type": "number" 
+      }
+    ],
+      "responses": {
+        "200": {
+          "description": "successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                  "$ref": "#/components/schemas/Office"
+                
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -111.109421,
+                        43.585147
+                      ]
+                    },
+                    "image": [],
+                    "_id": "5e986e2b92ea60ef4e43e8ae",
+                    "street": "string",
+                    "city": "string",
+                    "postCode": 0,
+                    "country": "string",
+                    "building_use": "string",
+                    "title": "string",
+                    "description": "string",
+                    "price": 0,
+                    "buyRent": true,
+                    "date": "2020-04-06T06:01:17.171Z",
+                    "__v": 0
+                  }
+                }
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid tag value",
+          "content": {}
+        }
+      }
+    }
+  }
+
 },
 "components": {
   "schemas": {
